--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7,13 +7,14 @@
     margin: 1px;
 }
 
-#sidebar > li:hover{
+#stepper, .toolbar > li:hover{
     cursor:pointer;
 }
 
 .bbred3{
     border-bottom:3px solid rgb(204, 0, 0);
 }
+
 @charset "UTF-8";
 /*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
